cluster/apps/docs/docs-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs-local-ingressroute
  namespace: docs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: docs-static-nginx
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs-http-ingressroute
  namespace: docs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: docs-middleware-redirect-scheme
      services:
        - name: docs-static-nginx
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs-https-ingressroute
  namespace: docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        #- name: docs-middleware-basicauth
        #- name: docs-middleware-headers
      services:
        - name: docs-static-nginx
          port: 80
  tls:
    secretName: docs-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docs-middleware-redirect-scheme
  namespace: docs
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
